--- a/FaceDetection&Tracking.ipynb
+++ b/FaceDetection&Tracking.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2"
+    "import cv2\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -18,33 +19,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alg=\"haarcascade_frontalface_default.xml\" #variables assign\n",
-    "haar_cascade=cv2.CascadeClassifier(alg) # load the algorithm"
+    "alg=\"haarcascade_frontalface_default.xml\" # store the path of the algorithm\n",
+    "haar_cascade=cv2.CascadeClassifier(alg) # load the algorithm using sintax"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m _,img\u001b[38;5;241m=\u001b[39mcam\u001b[38;5;241m.\u001b[39mread() \u001b[38;5;66;03m#read frame from camera \u001b[39;00m\n\u001b[0;32m      4\u001b[0m grayImg\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mcvtColor(img,cv2\u001b[38;5;241m.\u001b[39mCOLOR_BGR2GRAY)\n\u001b[1;32m----> 5\u001b[0m face\u001b[38;5;241m=\u001b[39m\u001b[43mhaar_cascade\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetectMultiScale\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgrayImg\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1.3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m#passing algorithm an\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m (x,y,w,h) \u001b[38;5;129;01min\u001b[39;00m face:\n\u001b[0;32m      7\u001b[0m     cv2\u001b[38;5;241m.\u001b[39mrectangle(img,(x,y),(x\u001b[38;5;241m+\u001b[39mw,y\u001b[38;5;241m+\u001b[39mh),(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m255\u001b[39m),\u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "cam=cv2.VideoCapture(0)\n",
-    "while True:\n",
-    "    _,img=cam.read()\n",
+    "while True: #loop until q is pressed\n",
+    "    _,img=cam.read() #read frame from camera \n",
     "    grayImg=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
-    "    face=haar_cascade.detectMultiScale(grayImg,1.3,4)\n",
+    "    face=haar_cascade.detectMultiScale(grayImg,1.3,4)  #passing algorithm an\n",
     "    for (x,y,w,h) in face:\n",
-    "        cv2.rectangle(img,(x,y),(x+w,y+h),(255,0,0),2)\n",
-    "    cv2.imshow(\"Face Detection\",img)\n",
+    "        cv2.rectangle(img,(x,y),(x+w,y+h),(0,0,255),2)\n",
+    "    # cv2.imshow(\"Face Detection\",img)\n",
+    "    plt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB))\n",
     "    if cv2.waitKey(1)==ord('q'):\n",
     "        break\n",
     "cam.release()\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
